# awesomewasm_2024

./: Cargo.toml  NOTICE  README.md
contracts/fixed_power/: Cargo.toml
contracts/fixed_power/src/: contract.rs  msg.rs
contracts/voting/: Cargo.toml
contracts/voting/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  testing.rs  testing2.rs
